--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,12 @@
 		<repository>
 			<id>central</id>
 			<name>releases</name>
-			<url>http://localhost:8083/artifactory/libs-release</url>
+			<url>http://192.168.1.110:8083/artifactory/libs-release</url>
 		</repository>
 		<snapshotRepository>
 			<id>central-snapshot</id>
 			<name>snapshot</name>
-			<url>http://localhost:8083/artifactory/libs-snapshot-local</url>
+			<url>http://192.168.1.110:8083/artifactory/libs-snapshot-local</url>
 		</snapshotRepository>
 	</distributionManagement>
 
