--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,9 @@
 	<distributionManagement>
 		<repository>
 			<id>central</id>
-			<name>releases</name>
+			<name>1da83d913848-releases</name>
 			<url>http://192.168.1.110:8083/artifactory/libs-release</url>
 		</repository>
-		<snapshotRepository>
-			<id>central-snapshot</id>
-			<name>snapshot</name>
-			<url>http://192.168.1.110:8083/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
 	</distributionManagement>
 
 </project>
